# MeetingBro

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  OPTIMIZATION_NOTES.md  README.md  START.md  agent.md  tasks.md
app/backend/: pyproject.toml
app/backend/meetingbro/: exporter.py  hardware.py  main.py  schemas.py
app/backend/meetingbro/asr/: __init__.py  base.py  faster_whisper_adapter.py  qwen3_asr_adapter.py
app/backend/meetingbro/audio/: __init__.py  capture.py  enhancement.py  loopback.py  mixed.py  vad.py
app/backend/meetingbro/diarization/: __init__.py  base.py  energy.py
app/backend/meetingbro/llm/: openai_compatible.py
app/backend/meetingbro/session/: __init__.py  manager.py  profiles.py
app/backend/meetingbro/storage/: __init__.py  db.py
app/backend/meetingbro/summarization/: __init__.py  base.py  heuristic.py  llm.py
app/backend/meetingbro/translation/: __init__.py  base.py  llm.py  passthrough.py
docs/: architecture.md  faq.md  llm-providers.md  platform-support.md  roadmap.md  shared-types.md  troubleshooting.md
scripts/: benchmark_accumulation_latency.py  benchmark_asr.py  benchmark_preview_backends.py  benchmark_qwen3_offline_capability.py  benchmark_runtime_profiles.py  benchmark_streaming_preview_candidate.py  dep_check.py  e2e_loopback.py  e2e_vertical_slice.py  list_audio_devices.py  verify_adaptive_pre_vad_trailing.py  verify_asr_repetition.py  verify_bilingual_export.py  verify_bookmark.py  verify_c1.py  verify_c5.py  verify_c7.py  verify_early_flush.py  verify_export_meeting.py  verify_fast_preview.py  verify_finalize.py  (+16 more)
(+12 files in other folders)
