[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meetingbro-backend"
version = "0.1.0"
description = "Local backend for MeetingBro: audio capture, transcription, diarization, summarization, translation."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "websockets>=12",
  "faster-whisper>=1.0",
  "silero-vad>=6.2",
  "sounddevice>=0.5",
  "soundfile>=0.12",
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
]
llm = [
  "anthropic>=0.30",
  "openai>=1.30",
]
windows = [
  "soundcard>=0.4",
]

[project.scripts]
meetingbro-backend = "meetingbro.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["meetingbro*"]
